--- a/README
+++ b/README
@@ -1,18 +1,26 @@
 Bootloder for AVR
 
+
+After powering up of AVR - MCU waits for the data from ARM.
+While "$" received,  AVR strats to receive packets which consit of
+
+##############################################
+# $ + Packet # + Size of packet + CRC + Data #
+##############################################
+
+When received, AVR calculates CRC of Data just by sum of all bytes
+of Data.If CRC equals the received CRC in Packet Header then AVR sends
+to UART number of received packet, that means that packet received
+correctly and we can receive the next packet.
+
 WHAT IS GOING 2 B IMPLEMENTED
-Xmodem function with CRC checking
 LED indication of each packet
 Watchdog if nothing is going on
 Check every 128 bytes received, and write in flash if the content is different
 LED indication of succesfully received firmware
 Led indication for waiting time for incoming firmware
-Do not write 1A bytes in the end of the last packet
-Check the duplication of <CR> coming from the ARM side
 
 Algorithm for flashing firmware
-1. Waiting for 1-2 sec when all the odd data from ARM side will come out and will be ignored (Show by LED)
-2. If "$U" - command existed in odd data  - allow to start firmware update.
 
 
 WHAT IS ALREADY IMPLEMENTED AND CHECKED
